# sxtwl-rs

./: Cargo.toml  LICENSE  README.md  build.rs  original_qishuo_strings.rs  unpack_ssq.py
builder/: mod.rs  progress.rs
builder/modules/: mod.rs
builder/modules/day_dog/: mod.rs
builder/modules/day_god/: mod.rs  original_strings.rs
builder/modules/holiday/: mod.rs  original_holiday_strings.rs
builder/modules/leap_month/: mod.rs  original_leap_month_strings.rs
builder/modules/qishuo/: mod.rs
builder/modules/rab_byung_month_days/: mod.rs  original_strings.rs
examples/: basic_usage.rs  ganzhi_jieqi.rs  julian_day.rs
scripts/: generate_coefficients.py
src/: .gitignore  astronomy.rs  cache.rs  consts.rs  date.rs  enums.rs  error.rs  festival.rs  ganzhi.rs  gz.rs  holiday.rs  jd.rs  jieqi.rs  julian.rs  julianday.rs  lib.rs  lunar.rs  lunar_phase_calculator.rs  qishuo_fit_parameter.rs  rabbyung.rs  shengxiao.rs  sixtycycle.rs  solar.rs  solordate.rs  ssq.rs  sxtwl.rs  types.rs  utils.rs
src/astronomy/: coefficients.rs  delta_t.rs  math_utils.rs  nutation.rs  planetary_orbits.rs  precession.rs
src/culture/: dog.rs  fetus.rs  mod.rs  nine.rs  peng_zu.rs  phenology.rs  plumrain.rs
src/culture/ren/: minor.rs
src/culture/star/: mod.rs  nine.rs  seven.rs  six.rs  ten.rs  twelve.rs  twenty_eight.rs
src/eightchar/: mod.rs  provider.rs
src/sxtwl/: coefficients.rs  consts.rs  mod.rs
src_cpp/: SSQ.cpp  eph copy.cpp
