[package]
name = "sxtwl-rs"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
description = "农历/公历转换与传统历法计算库（支持no_std环境）"
repository = ""
readme = "README.md"

[dependencies]
libm = "0.2.15"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "ganzhi_jieqi"
path = "examples/ganzhi_jieqi.rs"

[[example]]
name = "julian_day"
path = "examples/julian_day.rs"